Segundo día curso. Nuevos conocimientos de CSS.

--- a/css/index.html
+++ b/css/index.html
@@ -21,6 +21,52 @@
     <a href="https://www.google.com">google</a>
     <p class="test">Hola! Soy un párrafo! Hola! Soy un párrafo! Hola! Soy un párrafo! Hola! Soy un párrafo! Hola! Soy un párrafo! Hola! Soy un párrafo! Hola! Soy un párrafo! Hola! Soy un párrafo! Hola! Soy un párrafo! Hola! Soy un párrafo! Hola! Soy un párrafo! Hola! Soy un párrafo! Hola! Soy un párrafo! Hola! Soy un párrafo! Hola! Soy un párrafo! Hola! Soy un párrafo! Hola! Soy un párrafo! Hola! Soy un párrafo! Hola! Soy un párrafo! Hola! Soy un párrafo! Hola! Soy unpárrafo!
     </p>
-    <a class="link" href="https://www.google.com">Google.com</a>
+    <a class="enlace" href="https://www.google.com">Google.com</a>
+    <ul>
+        <li>Elemento 1</li>
+        <li>Elemento 2</li>
+        <li>Elemento 3</li>
+    </ul>
+    <table>
+        <tr>
+            <th>Compañia</th>
+            <th>Contacto</th>
+            <th>País</th>
+        </tr>
+        <tr>
+            <td>Naturgy</td>
+            <td>Jose Ignacio</td>
+            <td>España</td>
+        </tr>
+        <tr>
+            <td>Apple</td>
+            <td>Tim Cook</td>
+            <td>USA</td>
+        </tr>
+        <tr>
+            <td>Respsol</td>
+            <td>Jaun Lopez</td>
+            <td>España</td>
+        </tr>
+        <tr>
+            <td>Cepsa</td>
+            <td>Pepito Perez</td>
+            <td>España</td>
+        </tr>                
+    </table>
+    <p>Hola! Soy un bloque!</p>
+    <p>Hola! Soy un bloque!</p>
+    <span>Hola soy inline</span>
+    <span>Hola soy inline</span>
+    <div class="invisible">Soy un bloque invisible</div>
+    <p id="tamaño">Esta es una texto para ver la propiedad de tamaño max y min de un elemento. Esta es una texto para ver la propiedad de tamaño max y min de un elemento. Esta es una texto para ver la propiedad de tamaño max y min de un elemento</p>
+    <div class="caja">
+            Esto es una prueba de texto.
+    </div>
+    <div>
+        <img src="http://placekitten.com/200/200">
+        <p id="flotar">Esta es una texto para ver la propiedad de tamaño float de un elemento. Esta es una texto para ver la
+        propiedad de tamaño float de un elemento. Esta es una texto para ver la propiedad de tamaño float de un elemento</p>
+    </div>
 </body>
 </html>
