Se finaliza con la parte de CSS del curso de frontend

--- a/css/CSS Grid/index.html
+++ b/css/CSS Grid/index.html
@@ -9,12 +9,15 @@
 </head>
 <body>
     <div class="grid">
-        <div class="element header">HEADER</div>
-        <div class="element">B</div>
-        <div class="element">C</div>
-        <div class="element">D</div>
-        <div class="element">E</div>
-        <div class="element">F</div>
+        <div class="element item-1">ELEMENTO A</div>
+        <div class="element item-2">ELEMENTO B</div>
+        <div class="element item-3">ELEMENTO C</div>
+        <div class="element item-4">ELEMENTO D</div>
+        <div class="element item-5">ELEMENTO E</div>
+        <div class="element item-6">ELEMENTO F</div>
+        <div class="element item-7">ELEMENTO E</div>
+        <div class="element item-8">ELEMENTO F</div>
+        <div class="element item-9">ELEMENTO G</div>
     </div>
 </body>
 </html>
